--- a/app/src/main/res/layout/fragment_link_wallet.xml
+++ b/app/src/main/res/layout/fragment_link_wallet.xml
@@ -33,7 +33,7 @@
                 android:layout_width="120dp"
                 android:layout_height="70dp"
                 android:layout_centerHorizontal="true"
-                android:src="@drawable/brd_logo_gradient" />
+                android:src="@drawable/eca_white" />
 
             <com.breadwallet.presenter.customviews.BaseTextView
                 android:id="@+id/subtitle"
@@ -41,9 +41,9 @@
                 android:layout_height="wrap_content"
                 android:layout_below="@id/brd_logo"
                 android:layout_centerHorizontal="true"
-                android:layout_marginTop="-16dp"
+                android:layout_marginTop="-2dp"
                 android:text="@string/LinkWallet.logoFooter"
-                android:textColor="?attr/link_wallet_subtitle_text_color"
+                android:textColor="@color/white"
                 android:textSize="20sp"
                 app:brdFont="@string/Font.CircularPro_Bold" />
 
