--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -35,8 +35,8 @@
     <item name="menu_icons" type="color">#29ABE2</item>
     <color name="shimmer_color">#a2ffffff</color>
 
-    <item name="logo_gradient_start" type="color">#F8A445</item>
-    <item name="logo_gradient_end" type="color">#fc5394</item>
+    <item name="logo_gradient_start" type="color">#ededed</item>
+    <item name="logo_gradient_end" type="color">#be00ff</item>
 
     <item name="finger_gradient_start" type="color">#9c7ee2</item>
     <item name="finger_gradient_end" type="color">#7F52E6</item>
@@ -53,7 +53,7 @@
     <item name="recover_wallet_header_gradient_start" type="color">#EF8BB1</item>
     <item name="recover_wallet_header_gradient_end" type="color">#FF5193</item>
 
-    <item name="pin_pad_text" type="color">#A3A8AE</item>
+    <item name="pin_pad_text" type="color">#ffffff</item>
     <item name="extra_light_blue_background" type="color">#f2f2f2</item>
 
     <item name="button_primary_normal" type="color">#29ABE2</item>
@@ -72,7 +72,7 @@
     <color name="viewfinder_border">#ffafed44</color>
 
     //Currency screen
-    <color name="currency_header_background">#f29500</color>
+    <color name="currency_header_background">#1c1242</color>
     <color name="currency_subheading_color">#F0E5D7</color>
     <color name="currency_buttons_color">#ffac26</color>
 
@@ -107,21 +107,21 @@
     <color name="add_wallets_border_color">#e5e5e5</color>
 
     // Dark Mode colors
-    <color name="primary_background">#251935</color>
+    <color name="primary_background">#1c1242</color>
     <color name="secondary_background">#302442</color>
     <color name="tertiary_background">#2E2540</color>
     <color name="prompt_background">#1E1C41</color>
     <color name="prompt_input">#f8f7fc</color>
-    <color name="button_gradient_start_color">#FF5193</color>
-    <color name="button_gradient_end_color">#F29500</color>
+    <color name="button_gradient_start_color">#be00ff</color>
+    <color name="button_gradient_end_color">#1c1242</color>
     <color name="button_add_wallet_background">#444b77f3</color>
     <color name="button_cancel_add_wallet_background">#44E7AA41</color>
     <color name="button_add_wallet_text">#4b77f3</color>
     <color name="button_cancel_add_wallet_text">#E7AA41</color>
     <color name="text_total_assets_label">#bfffffff</color>
-    <color name="pin_pad_delete">#FF548D</color>
+    <color name="pin_pad_delete">#ffffff</color>
     <color name="pin_dot_filled_dark">#FF5193</color>
-    <color name="pin_dot_filled_light">#F29500</color>
+    <color name="pin_dot_filled_light">#1c1242</color>
     <color name="create_new_wallet_button_dark">#29ABE2</color>
     <color name="create_new_wallet_button_light">#4C98FD</color>
     <color name="recover_wallet_button_dark">#33FFFFFF</color>
@@ -147,17 +147,17 @@
 
 
     <array name="pin_digit_button_colors">
-        <item>#FE5A80</item>
-        <item>#FC6469</item>
-        <item>#FB6B5C</item>
-        <item>#FA714E</item>
-        <item>#FD5E76</item>
-        <item>#FC6568</item>
-        <item>#FB6B5B</item>
-        <item>#FE5A80</item>
-        <item>#FD5F75</item>
-        <item>#FC6667</item>
-        <item>#FF548D</item>
+        <item>#ffffff</item>
+        <item>#ffffff</item>
+        <item>#ffffff</item>
+        <item>#ffffff</item>
+        <item>#ffffff</item>
+        <item>#ffffff</item>
+        <item>#ffffff</item>
+        <item>#ffffff</item>
+        <item>#ffffff</item>
+        <item>#ffffff</item>
+        <item>#ffffff</item>
     </array>
 
 </resources>
