--- a/app/src/main/res/drawable/b_blue_stroke_pressed.xml
+++ b/app/src/main/res/drawable/b_blue_stroke_pressed.xml
@@ -8,7 +8,7 @@
         android:right="8dp"/>
     <item android:bottom="16dp">
         <shape xmlns:android="http://schemas.android.com/apk/res/android">
-            <solid android:color="@color/button_secondary"/>
+            <solid android:color="@color/primary_background"/>
             <stroke
                 android:width="1dp"
                 android:color="@color/dark_blue"/>
