--- a/app/src/main/res/layout/activity_about.xml
+++ b/app/src/main/res/layout/activity_about.xml
@@ -12,11 +12,9 @@
         android:id="@+id/back_button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:background="?attr/toolbar_back_arrow"
+        android:background="@drawable/backward3"
         app:layout_constraintStart_toStartOf="@id/brd_rewards_id"
-        app:layout_constraintTop_toTopOf="@id/title"
-        tools:layout_editor_absoluteX="16dp"
-        tools:layout_editor_absoluteY="16dp" />
+        app:layout_constraintTop_toTopOf="@id/title" />
 
 
     <com.breadwallet.presenter.customviews.BaseTextView
@@ -66,13 +64,13 @@
 
     <ImageView
         android:id="@+id/brd_logo"
-        android:layout_width="132dp"
+        android:layout_width="264dp"
         android:layout_height="80dp"
         android:layout_marginStart="16dp"
         android:layout_marginTop="60dp"
         android:layout_marginEnd="16dp"
         android:gravity="center_horizontal"
-        android:src="@drawable/brd_logo_gradient"
+        android:src="@drawable/eca_white"
         android:textColor="@color/white"
         android:textSize="48sp"
         app:layout_constraintEnd_toEndOf="parent"
@@ -86,7 +84,7 @@
         android:id="@+id/title"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="36dp"
+        android:layout_marginTop="16dp"
         android:text="@string/About.title"
         android:textSize="@dimen/header"
         app:brdFont="@string/Font.CircularPro_Bold"
@@ -161,21 +159,21 @@
 
     <ImageView
         android:id="@+id/twitter_share_button"
-        android:layout_width="16dp"
-        android:layout_height="16dp"
-        android:src="@drawable/ic_share"
+        android:layout_width="38dp"
+        android:layout_height="38dp"
+        android:src="@drawable/twitter"
         app:layout_constraintBottom_toBottomOf="@+id/textView22"
         app:layout_constraintRight_toRightOf="@+id/view4"
         app:layout_constraintTop_toTopOf="@+id/textView22" />
 
     <ImageView
         android:id="@+id/blog_share_button"
-        android:layout_width="16dp"
-        android:layout_height="16dp"
+        android:layout_width="38dp"
+        android:layout_height="38dp"
         android:layout_marginTop="0dp"
         android:layout_marginEnd="0dp"
         android:layout_marginBottom="0dp"
-        android:src="@drawable/ic_share"
+        android:src="@drawable/discord"
         app:layout_constraintBottom_toBottomOf="@+id/textView24"
         app:layout_constraintRight_toRightOf="@+id/view5"
         app:layout_constraintTop_toTopOf="@+id/textView24" />
@@ -223,9 +221,9 @@
 
     <ImageView
         android:id="@+id/reddit_share_button"
-        android:layout_width="16dp"
-        android:layout_height="16dp"
-        android:src="@drawable/ic_share"
+        android:layout_width="38dp"
+        android:layout_height="38dp"
+        android:src="@drawable/telegram"
         app:layout_constraintBottom_toBottomOf="@+id/textView21"
         app:layout_constraintRight_toRightOf="@+id/divider1"
         app:layout_constraintTop_toTopOf="@+id/textView21" />
