--- a/app/src/main/res/layout/activity_camera.xml
+++ b/app/src/main/res/layout/activity_camera.xml
@@ -27,12 +27,12 @@
         android:layout_height="112dp"
         android:layout_alignParentBottom="true"
         android:layout_alignParentStart="true"
-        android:background="@color/almost_black">
+        android:background="@color/wallet_balance_fiat">
 
         <ImageButton
             android:id="@+id/take_picture"
             android:layout_margin="16dp"
-            android:background="@drawable/ic_take_picture"
+            android:background="@drawable/ic_launcher"
             android:layout_width="72dp"
             android:layout_height="72dp"
             android:layout_gravity="center"
