--- a/app/src/main/res/layout/activity_intro.xml
+++ b/app/src/main/res/layout/activity_intro.xml
@@ -8,12 +8,12 @@
 
     <View
         android:id="@+id/logo_view"
-        android:layout_width="96dp"
-        android:layout_height="32dp"
+        android:layout_width="300dp"
+        android:layout_height="94dp"
         android:layout_marginStart="16dp"
         android:layout_marginTop="128dp"
         android:layout_marginEnd="16dp"
-        android:background="@drawable/brd_logo_gradient"
+        android:background="@drawable/eca_white"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
@@ -28,7 +28,7 @@
         android:text="@string/Onboarding.getStarted"
         android:textColor="@color/white"
         android:textSize="@dimen/button_text_size"
-        app:buttonColor="@color/on_boarding_buy_button"
+        app:buttonColor="@color/primary_background"
         app:buttonType="6"
         app:isBreadButton="true"
         app:layout_constraintBottom_toTopOf="@+id/button_recover_wallet"
@@ -46,7 +46,7 @@
         android:text="@string/Onboarding.restoreWallet"
         android:textColor="@color/white"
         android:textSize="@dimen/button_text_size"
-        app:buttonColor="@color/on_boarding_browse_button"
+        app:buttonColor="@color/primary_background"
         app:buttonType="7"
         app:isBreadButton="true"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -58,13 +58,14 @@
         android:layout_width="240dp"
         android:layout_height="wrap_content"
         android:layout_marginLeft="8dp"
-        android:layout_marginTop="32dp"
+        android:layout_marginTop="76dp"
         android:layout_marginRight="8dp"
         android:lineSpacingMultiplier="1.3"
         android:text="@string/OnboardingPageOne.title"
         android:textAlignment="center"
         android:textColor="@color/white"
         android:textSize="20sp"
+        app:layout_constraintHorizontal_bias="0.496"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/logo_view" />
