--- a/app/src/main/res/layout/activity_nodes.xml
+++ b/app/src/main/res/layout/activity_nodes.xml
@@ -105,7 +105,7 @@
         android:layout_marginTop="0dp"
         android:layout_marginEnd="16dp"
         android:layout_marginBottom="0dp"
-        android:background="?attr/faq_button_primary_color"
+        android:background="@color/primary_background"
         android:visibility="gone"
         app:layout_constraintBottom_toBottomOf="@+id/title"
         app:layout_constraintRight_toRightOf="parent"
