--- a/app/src/main/res/layout/activity_restore.xml
+++ b/app/src/main/res/layout/activity_restore.xml
@@ -61,7 +61,6 @@
         android:id="@+id/relativeLayout"
         android:layout_width="0dp"
         android:layout_height="200dp"
-        android:background="@drawable/restore_gradient"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
@@ -105,14 +104,14 @@
 
         <ImageButton
             android:id="@+id/close_button"
-            android:layout_width="24dp"
-            android:layout_height="24dp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
             android:layout_alignTop="@+id/textView2"
             android:layout_alignBottom="@+id/textView2"
             android:layout_alignParentStart="true"
             android:layout_marginStart="16dp"
             android:background="@android:color/transparent"
-            android:src="?attr/back_arrow_secondary" />
+            android:src="@drawable/backward3" />
 
     </RelativeLayout>
 
