--- a/app/src/main/res/layout/bread_alert_dialog.xml
+++ b/app/src/main/res/layout/bread_alert_dialog.xml
@@ -12,7 +12,7 @@
         android:id="@+id/dialog_header"
         android:layout_width="match_parent"
         android:layout_height="40dp"
-        android:background="@drawable/bch_dialog_gradient"
+        android:background="@color/primary_background"
         android:orientation="vertical">
 
         <ImageButton
@@ -21,7 +21,7 @@
             android:layout_height="14dp"
             android:layout_centerInParent="true"
             android:layout_marginTop="10dp"
-            android:background="@drawable/brd_logo_white_svg" />
+            android:background="@drawable/brd_logo_white" />
 
         <ImageButton
             android:id="@+id/help_icon"
