--- a/app/src/main/res/layout/activity_about.xml
+++ b/app/src/main/res/layout/activity_about.xml
@@ -13,28 +13,20 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:background="@drawable/backward3"
-        app:layout_constraintStart_toStartOf="@id/brd_rewards_id"
+        app:layout_constraintStart_toStartOf="@id/brd_website"
         app:layout_constraintTop_toTopOf="@id/title" />
 
 
     <com.breadwallet.presenter.customviews.BaseTextView
-        android:id="@+id/brd_rewards"
+        android:id="@+id/brd_website"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="40dp"
+        android:layout_marginBottom="24dp"
         android:text="@string/About.walletID"
         android:textSize="18sp"
         app:layout_constraintBottom_toTopOf="@+id/divider4"
         app:layout_constraintLeft_toLeftOf="@id/divider4" />
 
-    <com.breadwallet.presenter.customviews.BaseTextView
-        android:id="@+id/brd_rewards_id"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginBottom="48dp"
-        android:textSize="16sp"
-        app:layout_constraintLeft_toLeftOf="@id/divider4"
-        app:layout_constraintTop_toBottomOf="@+id/brd_rewards" />
 
     <View
         android:id="@+id/divider4"
@@ -51,16 +43,6 @@
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent" />
 
-    <com.breadwallet.presenter.customviews.BaseTextView
-        android:id="@+id/brd_copy"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginEnd="12dp"
-        android:text="@string/URLHandling.copy"
-        android:textColor="@color/dark_blue"
-        android:textSize="20sp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/brd_rewards" />
 
     <ImageView
         android:id="@+id/brd_logo"
@@ -167,16 +149,22 @@
         app:layout_constraintTop_toTopOf="@+id/textView22" />
 
     <ImageView
-        android:id="@+id/blog_share_button"
+        android:id="@+id/discord_share_button"
         android:layout_width="38dp"
         android:layout_height="38dp"
-        android:layout_marginTop="0dp"
-        android:layout_marginEnd="0dp"
-        android:layout_marginBottom="0dp"
         android:src="@drawable/discord"
         app:layout_constraintBottom_toBottomOf="@+id/textView24"
         app:layout_constraintRight_toRightOf="@+id/view5"
         app:layout_constraintTop_toTopOf="@+id/textView24" />
+
+    <ImageView
+        android:id="@+id/website_share_button"
+        android:layout_width="38dp"
+        android:layout_height="38dp"
+        android:src="@drawable/website"
+        app:layout_constraintBottom_toBottomOf="@+id/brd_website"
+        app:layout_constraintRight_toRightOf="@+id/view5"
+        app:layout_constraintTop_toTopOf="@+id/brd_website" />
 
     <com.breadwallet.presenter.customviews.BaseTextView
         android:id="@+id/policy_text"
@@ -188,7 +176,7 @@
         android:layout_marginBottom="16dp"
         android:alpha="0.8"
         android:text="@string/About.privacy"
-        android:textColor="@color/dark_blue"
+        android:textColor="@color/white"
         android:textSize="16sp"
         app:layout_constraintBottom_toTopOf="@+id/info_text"
         app:layout_constraintHorizontal_bias="0.525"
@@ -220,7 +208,7 @@
         app:layout_constraintLeft_toLeftOf="@+id/divider1" />
 
     <ImageView
-        android:id="@+id/reddit_share_button"
+        android:id="@+id/telegram_share_button"
         android:layout_width="38dp"
         android:layout_height="38dp"
         android:src="@drawable/telegram"
