--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -69,6 +69,11 @@
                 android:paddingTop="@dimen/bread_margin"
                 android:paddingEnd="@dimen/bread_margin">
 
+                <android.support.v7.widget.RecyclerView
+                    android:id="@+id/rv_wallet_list"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content" />
+
             </LinearLayout>
 
         </ScrollView>
@@ -136,7 +141,7 @@
                         android:gravity="bottom"
                         android:layout_marginBottom="14dp"
                         android:text="@string/HomeScreen.menu"
-                        android:textColor="@color/sync_toolbar_retry_text" />
+                        android:textColor="@color/white" />
                 </LinearLayout>
 
                 <LinearLayout
