--- a/app/src/main/res/layout/activity_notification.xml
+++ b/app/src/main/res/layout/activity_notification.xml
@@ -6,7 +6,6 @@
     android:id="@+id/activity_intro_set_pit"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/extra_light_blue_background"
     tools:context="com.breadwallet.presenter.activities.settings.NotificationActivity">
 
     <com.breadwallet.presenter.customviews.BaseTextView
@@ -16,7 +15,7 @@
         android:layout_marginStart="@dimen/bread_margin"
         android:layout_marginTop="32dp"
         android:text="@string/PushNotifications.title"
-        android:textColor="@color/almost_black"
+        android:textColor="@color/white"
         android:textSize="@dimen/header"
         app:brdFont="@string/Font.CircularPro_Bold"
         app:layout_constraintLeft_toLeftOf="parent"
@@ -29,7 +28,7 @@
         android:layout_marginTop="24dp"
         android:lineSpacingMultiplier="1.3"
         android:text="@string/PushNotifications.body"
-        android:textColor="@color/almost_black"
+        android:textColor="@color/white"
         android:textSize="@dimen/sub_header"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintLeft_toLeftOf="@+id/title"
@@ -56,7 +55,7 @@
         android:layout_marginStart="0dp"
         android:layout_marginTop="40dp"
         android:text="@string/PushNotifications.label"
-        android:textColor="@color/almost_black"
+        android:textColor="@color/white"
         android:textSize="@dimen/sub_header"
         app:brdFont="@string/Font.CircularPro_Bold"
         app:layout_constraintLeft_toLeftOf="@+id/description"
