--- a/app/src/main/res/layout/email_prompt.xml
+++ b/app/src/main/res/layout/email_prompt.xml
@@ -13,7 +13,7 @@
     <android.support.constraint.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:background="@color/prompt_background">
+        android:background="@color/primary_background">
 
         <ImageView
             android:id="@+id/close_button"
