--- a/app/src/main/res/layout/activity_display_currency.xml
+++ b/app/src/main/res/layout/activity_display_currency.xml
@@ -94,6 +94,7 @@
             android:layout_weight="1.0"
             android:background="@color/primary_background"
             android:text="ECA (ECA)"
+            android:textColor="@color/white"
             android:padding="0dp"
             android:textSize="14sp"
             app:isBreadButton="false"
