--- a/app/src/main/res/layout/add_wallets_item.xml
+++ b/app/src/main/res/layout/add_wallets_item.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                 android:id="@+id/wallet_card"
-                android:layout_width="match_parent"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="@dimen/activity_vertical_margin"
                 android:background="@android:color/transparent">
@@ -12,9 +12,7 @@
         android:layout_height="wrap_content"
         android:layout_centerVertical="true"
         android:layout_centerHorizontal="true"
-        android:drawableStart="@drawable/ic_add_wallets"
         android:drawablePadding="16dp"
-        android:text="@string/TokenList.addTitle"
         android:textColor="@color/white"
         android:layout_marginBottom="16dp"
         android:textSize="16sp"/>
