--- a/app/src/main/res/layout/syncing_item.xml
+++ b/app/src/main/res/layout/syncing_item.xml
@@ -39,7 +39,7 @@
             android:layout_marginStart="16dp"
             android:layout_marginTop="16dp"
             android:text="@string/SyncingView.header"
-            android:textColor="@color/almost_black"
+            android:textColor="@color/white"
             android:textSize="@dimen/sub_header"
             app:brdFont="@string/Font.CircularPro_Bold"
             app:layout_constraintLeft_toLeftOf="parent"
