--- a/app/src/main/res/layout/view_bip38password_dialog.xml
+++ b/app/src/main/res/layout/view_bip38password_dialog.xml
@@ -18,7 +18,7 @@
         android:gravity="center"
         android:paddingTop="20dp"
         android:text="@string/Import.password"
-        android:textColor="@color/gray"
+        android:textColor="@color/white"
         android:textSize="@dimen/sub_header"
         app:brdFont="@string/Font.CircularPro_Bold"/>
 
