--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -68,7 +68,7 @@
         <item name="remove_wallet_button_background">@drawable/remove_wallet_button</item>
         <item name="hide_wallet_button_background">@drawable/remove_wallet_button</item>
         <item name="show_wallet_button_background">@drawable/add_wallet_button</item>
-        <item name="toolbar_back_arrow">@drawable/ic_arrow_left</item>
+        <item name="toolbar_back_arrow">@drawable/ic_arrow_left_white</item>
         <item name="back_arrow_secondary">@drawable/ic_arrow_left</item>
         <item name="pin_pad_delete_src">@drawable/ic_delete_gray</item>
         <item name="pin_dot_filled_background">@drawable/ic_pin_dot_black</item>
