--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -27,24 +27,24 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:orientation="vertical"
-                android:layout_marginTop="30dp"
+                android:layout_marginTop="10dp"
                 android:background="@drawable/burger"
                 android:paddingBottom="4dp">
             </LinearLayout>
 
             <ImageView
-                android:layout_width="80dp"
-                android:layout_height="80dp"
+                android:layout_width="210dp"
+                android:layout_height="64dp"
                 android:layout_centerHorizontal="true"
-                android:layout_marginTop="40dp"
-                android:background="@drawable/white_eca" />
+                android:layout_marginTop="10dp"
+                android:background="@drawable/eca_white" />
 
             <com.breadwallet.presenter.customviews.BaseTextView
                 android:id="@+id/total_assets_label"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_alignParentEnd="true"
-                android:layout_marginTop="40dp"
+                android:layout_marginTop="10dp"
                 android:layout_marginEnd="@dimen/activity_vertical_margin"
                 android:text="@string/HomeScreen.totalAssets"
                 android:textColor="@color/text_total_assets_label"
@@ -62,36 +62,255 @@
                 app:brdFont="@string/Font.CircularPro_Bold" />
         </RelativeLayout>
 
-        <ScrollView
+        <LinearLayout
+            android:id="@+id/toolbar_layout"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="10dp"
+            android:layout_below="@id/home_header"
+            android:animateLayoutChanges="true"
+            android:orientation="vertical">
+
+            <ViewFlipper
+                android:id="@+id/tool_bar_flipper"
+                android:layout_width="fill_parent"
+                android:layout_height="wrap_content"
+                tools:context="com.breadwallet.presenter.activities.CurrencyActivity">
+
+
+                <android.support.v7.widget.Toolbar xmlns:app="http://schemas.android.com/apk/res-auto"
+                    android:id="@+id/bread_bar"
+                    android:layout_width="match_parent"
+                    android:layout_height="160dp"
+                    android:layout_marginLeft="8dp"
+                    android:layout_marginRight="8dp"
+                    android:background="@color/primary_background"
+                    android:clipChildren="false"
+                    android:clipToPadding="false"
+                    android:contentInsetStart="0dp"
+                    android:contentInsetLeft="0dp"
+                    app:contentInsetLeft="0dp"
+                    app:contentInsetStart="0dp">
+
+                    <android.support.constraint.ConstraintLayout
+                        android:id="@+id/bread_toolbar"
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:animateLayoutChanges="true"
+                        android:clipChildren="false"
+                        android:clipToPadding="false">
+
+
+                        <com.breadwallet.presenter.customviews.BaseTextView
+                            android:id="@+id/currency_label"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_marginTop="16dp"
+                            android:textColor="@color/white"
+                            android:textSize="@dimen/header"
+                            app:layout_constraintEnd_toEndOf="parent"
+                            app:layout_constraintStart_toStartOf="parent"
+                            app:layout_constraintTop_toTopOf="parent" />
+
+
+                        <com.breadwallet.presenter.customviews.BaseTextView
+                            android:id="@+id/currency_usd_price"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:text="$16,904.34 per BTC"
+                            android:textColor="@color/trans_white"
+                            android:textSize="@dimen/sub_header"
+                            app:layout_constraintEnd_toEndOf="parent"
+                            app:layout_constraintStart_toStartOf="parent"
+                            app:layout_constraintTop_toBottomOf="@id/currency_label" />
+
+
+                        <com.breadwallet.presenter.customviews.BaseTextView
+                            android:id="@+id/balance_label"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_marginEnd="11dp"
+                            android:layout_marginBottom="54dp"
+                            android:text="@string/Account.balance"
+                            android:textColor="@color/trans_white"
+                            android:textSize="14sp"
+                            android:visibility="visible"
+                            app:layout_constraintBottom_toBottomOf="parent"
+                            app:layout_constraintEnd_toEndOf="parent"
+                            app:layout_constraintRight_toRightOf="parent" />
+
+
+                        <com.breadwallet.presenter.customviews.BaseTextView
+                            android:id="@+id/balance_primary"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_marginEnd="16dp"
+                            android:minHeight="70dp"
+                            android:paddingTop="8dp"
+                            android:text="$26,495.69"
+                            android:textColor="@color/white"
+                            android:textSize="22sp"
+                            app:brdFont="@string/Font.CircularPro_Bold"
+                            app:layout_constraintBottom_toBottomOf="parent"
+                            app:layout_constraintRight_toRightOf="parent"
+                            app:layout_constraintVertical_bias="0.492" />
+
+
+                        <ImageButton
+                            android:id="@+id/swap"
+                            android:layout_width="14dp"
+                            android:layout_height="14dp"
+                            android:layout_marginStart="8dp"
+                            android:layout_marginEnd="8dp"
+                            android:layout_marginBottom="30dp"
+                            android:background="@drawable/ic_swap_horizontal"
+                            app:layout_constraintBottom_toBottomOf="parent"
+                            app:layout_constraintRight_toLeftOf="@id/balance_primary"
+                            app:layout_constraintVertical_bias="0.492" />
+
+                        <com.breadwallet.presenter.customviews.BaseTextView
+                            android:id="@+id/balance_secondary"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_marginStart="28dp"
+                            android:maxLines="1"
+                            android:minHeight="70dp"
+                            android:paddingTop="18dp"
+                            android:paddingBottom="20dp"
+                            android:text="1.56739 BTC"
+                            android:textColor="@color/trans_white"
+                            android:textSize="16sp"
+                            app:layout_constraintBottom_toBottomOf="parent"
+                            app:layout_constraintEnd_toEndOf="@id/balance_label"
+                            app:layout_constraintEnd_toStartOf="@id/swap"
+                            app:layout_constraintRight_toLeftOf="@id/swap"
+                            app:layout_constraintVertical_bias="0.492" />
+
+
+                        <ImageButton
+                            android:id="@+id/search_icon"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_marginLeft="10dp"
+                            android:layout_marginBottom="98dp"
+                            android:background="@drawable/ic_search_white_24dp"
+                            app:layout_constraintBottom_toBottomOf="parent"
+                            app:layout_constraintEnd_toEndOf="parent" />
+
+
+                    </android.support.constraint.ConstraintLayout>
+
+
+                </android.support.v7.widget.Toolbar>
+
+                <com.breadwallet.presenter.customviews.BRSearchBar xmlns:app="http://schemas.android.com/apk/res-auto"
+                    android:id="@+id/search_bar"
+                    android:layout_width="match_parent"
+                    android:layout_height="160dp"
+                    android:background="@drawable/bread_gradient"
+                    android:contentInsetStart="0dp"
+                    android:contentInsetLeft="0dp"
+                    app:contentInsetLeft="0dp"
+                    app:contentInsetStart="0dp" />
+
+                <com.breadwallet.presenter.customviews.BRNotificationBar xmlns:app="http://schemas.android.com/apk/res-auto"
+                    android:id="@+id/notification_bar"
+                    android:layout_width="match_parent"
+                    android:layout_height="160dp"
+                    android:layout_alignParentTop="true"
+                    android:layout_marginStart="0dp"
+                    android:layout_marginEnd="0dp"
+                    android:background="@drawable/bread_gradient"
+                    android:contentInsetStart="0dp"
+                    android:contentInsetLeft="0dp"
+                    android:visibility="visible"
+                    app:breadText="@string/Alert.noInternet"
+                    app:contentInsetLeft="0dp"
+                    app:contentInsetStart="0dp" />
+
+
+            </ViewFlipper>
+
+        </LinearLayout>
+
+        <include
+            android:id="@+id/delisted_token_layout"
+            layout="@layout/view_delisted_token"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_below="@id/toolbar_layout"
+            android:visibility="gone" />
+
+        <LinearLayout
+            android:id="@+id/progress_layout"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/toolbar_layout"
+            android:animateLayoutChanges="true"
+            android:background="@color/sync_toolbar"
+            android:orientation="vertical"
+            android:visibility="gone">
+
+            <RelativeLayout
+                android:id="@+id/progress_layout_margins"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="10dp"
+                android:layout_marginTop="12dp"
+                android:layout_marginEnd="10dp"
+                android:layout_marginBottom="10dp"
+                android:orientation="vertical">
+
+                <com.breadwallet.presenter.customviews.BaseTextView
+                    android:id="@+id/sync_status_label"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_centerVertical="true"
+                    android:text="Synced Through 01/01/70 00:00"
+                    android:textColor="@color/sync_toolbar_text"
+                    android:textSize="14sp" />
+
+                <com.breadwallet.presenter.customviews.BaseTextView
+                    android:id="@+id/syncing_label"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_centerVertical="true"
+                    android:layout_marginEnd="5dp"
+                    android:layout_toStartOf="@id/sync_progress"
+                    android:text="@string/SyncingView.syncing"
+                    android:textColor="@color/sync_toolbar_text"
+                    android:textSize="14sp" />
+
+                <ProgressBar
+                    android:id="@+id/sync_progress"
+                    android:layout_width="14dp"
+                    android:layout_height="14dp"
+                    android:layout_alignParentEnd="true"
+                    android:layout_centerInParent="true"
+                    android:indeterminate="true"
+                    android:indeterminateDrawable="@drawable/wallet_sync_progress_bar"
+                    android:indeterminateTint="@color/sync_toolbar_text"
+                    android:keepScreenOn="true"
+                    app:layout_constraintBottom_toBottomOf="parent"
+                    app:layout_constraintEnd_toEndOf="parent" />
+            </RelativeLayout>
+        </LinearLayout>
+
+        <android.support.design.widget.CoordinatorLayout
+            android:id="@+id/transaction_list_coordinator_layout"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_above="@+id/bottom_toolbar_layout1"
-            android:layout_below="@id/home_header">
+            android:layout_below="@id/delisted_token_layout" />
 
-            <LinearLayout
-                android:id="@+id/list_group_layout"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:orientation="vertical"
-                android:paddingStart="@dimen/bread_margin"
-                android:paddingTop="@dimen/bread_margin"
-                android:paddingEnd="@dimen/bread_margin">
+        <android.support.v7.widget.RecyclerView
+            android:id="@+id/tx_list"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:clipToPadding="false"
+            app:layout_behavior="@string/appbar_scrolling_view_behavior" />
 
-                <android.support.v7.widget.RecyclerView
-                    android:id="@+id/rv_wallet_list"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content" />
 
-                <android.support.v7.widget.RecyclerView
-                    android:id="@+id/tx_list"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:clipToPadding="false"
-                    app:layout_behavior="@string/appbar_scrolling_view_behavior" />
-
-            </LinearLayout>
-
-        </ScrollView>
 
         <LinearLayout
             android:id="@+id/bottom_toolbar_layout1"
@@ -165,18 +384,6 @@
                 app:isBreadButton="true" />
 
         </LinearLayout>
-
-        <com.breadwallet.presenter.customviews.BRNotificationBar
-            android:id="@+id/notification_bar"
-            android:layout_width="match_parent"
-            android:layout_height="160dp"
-            android:layout_marginTop="4dp"
-            android:background="@color/blue"
-            android:contentInsetStart="0dp"
-            android:contentInsetLeft="0dp"
-            app:breadText="@string/Alert.noInternet"
-            app:contentInsetLeft="0dp"
-            app:contentInsetStart="0dp" />
 
     </RelativeLayout>
 
